arreglo de links

--- a/pages/discos.html
+++ b/pages/discos.html
@@ -125,21 +125,21 @@
 
             <!-- seccion de portada -->
             <div class="derecha">
-                <img src="../IMG/portada-taylor.jpeg"
+                <img src="../img/portada-taylor.jpeg"
                     alt="Portada de Taylor Swift con un collage que refleja sus diferentes  eras musicales a lo largo de su carrera ">
             </div>
         </div>
         <!-- seccion audio -->
         <div class="audios-discos">
-            <audio src="../AUD/the-eras-tour-intro.mp3" controls id="audio"> </audio>
+            <audio src="../aud/the-eras-tour-intro.mp3" controls id="audio"> </audio>
         </div>
 
     </main>
     <!-- footer  -->
     <footer>
-        <p> <img src="../IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
+        <p> <img src="../img/Instagram_icon.png"" alt=" logo a color de instagram"> <a
                 href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-        <p> <img src="../IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
+        <p> <img src="../img/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
                 target="_blank">Taylornation@gmail.com</a></p>
         <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al
             866-682-4413 para obtener ayuda. </p>
